[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[project]
name        = "halo"
version     = "0.1.0"
description = "A terminal flow field screensaver - Perlin noise × Braille × 24-bit color"
readme      = "README.md"
license     = { text = "MIT" }
authors     = [{ name = "halo contributors" }]
keywords    = [
    "terminal", "screensaver", "flow-field",
    "perlin-noise", "braille", "ansi", "ascii-art", "cli",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Terminals",
    "Topic :: Artistic Software",
]
requires-python = ">=3.10"
dependencies    = ["numpy>=1.24"]

[project.scripts]
halo = "halo.main:main"

[project.urls]
Homepage   = "https://github.com/programmersd21/halo"
Repository = "https://github.com/programmersd21/halo"
Issues     = "https://github.com/programmersd21/halo/issues"

[tool.hatch.build.targets.wheel]
packages = ["halo"]

[tool.hatch.version]
path = "halo/__init__.py"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
